--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="8051 simulator" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta property="og:title" content="8051 Simulator" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <title>8051 Simulator</title>
+    
+    <!-- React & ReactDOM -->
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- Babel for JSX -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
     <link rel="stylesheet" href="/static/styles.css">
-    <title>{% block title %}{% endblock %}</title>
-    {% block head %}
-    {% endblock %}
 </head>
-
 <body class="bg-dark">
-    <div class="header">
-        <a href="https://github.com/devanshshukla99/8051-Simulator">GitHub devanshshukla99/8051-Simulator</a>
-    </div>
-    <div class="d-flex justify-content-center align-items-center mx-0 px-0">
-        <h2>
-            8051 Simulator
-        </h2>
-    </div>
-    {% block body %}
-    {% endblock %}
+    <div id="root"></div>
+    {% block body %}{% endblock %}
 </body>
-
 </html>
