--- a/api/templates/render_memory.html
+++ b/api/templates/render_memory.html
@@ -1,40 +1,73 @@
 <div class="table-container" style="overflow-x: auto;">
-    <table class="table table-striped table-hover table-dark" style="font-size: 10px;">
-        <caption>RAM</caption>
-        <tbody>
-            <td></td>
-            {% for x in ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "A", "B", "C", "D", "E", "F"] %}
-                <th scope="col">{{ x }}</th>
-            {% endfor %}
-            {% for ramval in ram %}
+    {% if ram %}
+    <div class="memory-table">
+        <div class="memory-title">RAM (0x00-0x7F)</div>
+        <table class="table table-striped table-hover table-dark" style="font-size: 10px;">
+            <tbody>
+                <td></td>
+                {% for x in ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "A", "B", "C", "D", "E", "F"] %}
+                    <th scope="col">{{ x }}</th>
+                {% endfor %}
+                {% for ramval in ram %}
+                        <tr>
+                            <th scope="row">
+                                {{ ramval[0][0][:-1] }}
+                            </th>
+                        {% for key, value in ramval %}
+                            <td>{{ (value|string)[2:] }}</td>
+                        {% endfor %}
+                        </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    {% endif %}
+
+    {% if sfr %}
+    <div class="memory-table">
+        <div class="memory-title">SFR (0x80-0xFF)</div>
+        <table class="table table-striped table-hover table-dark" style="font-size: 10px;">
+            <tbody>
+                <td></td>
+                {% for x in ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "A", "B", "C", "D", "E", "F"] %}
+                    <th scope="col">{{ x }}</th>
+                {% endfor %}
+                {% for sfr_val in sfr %}
+                        <tr>
+                            <th scope="row">
+                                {{ sfr_val[0][0][:-1] }}
+                            </th>
+                        {% for key, value in sfr_val %}
+                            <td>{{ (value|string)[2:] }}</td>
+                        {% endfor %}
+                        </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    {% endif %}
+
+    {% if rom %}
+    <div class="memory-table">
+        <div class="memory-title">ROM</div>
+        <table class="table table-striped table-hover table-dark" style="font-size: 10px;">
+            <tbody>
+                <td></td>
+                {% for x in ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "A", "B", "C", "D", "E", "F"] %}
+                    <th scope="col">{{ x }}</th>
+                {% endfor %}
+                {% for romval in rom %}
                     <tr>
                         <th scope="row">
-                            {{ ramval[0][0][:-1] }}
+                            {{ romval[0][0][:-1] }}
                         </th>
-                    {% for key, value in ramval %}
+                    {% for key, value in romval %}
                         <td>{{ (value|string)[2:] }}</td>
                     {% endfor %}
                     </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <table class="table table-striped table-hover table-dark" style="font-size: 10px;">
-        <caption>ROM</caption>
-        <tbody>
-            <td></td>
-            {% for x in ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "A", "B", "C", "D", "E", "F"] %}
-                <th scope="col">{{ x }}</th>
-            {% endfor %}
-            {% for romval in rom %}
-                <tr>
-                    <th scope="row">
-                        {{ romval[0][0][:-1] }}
-                    </th>
-                {% for key, value in romval %}
-                    <td>{{ (value|string)[2:] }}</td>
                 {% endfor %}
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
+    {% endif %}
 </div>
